erDiagram
    users {
        int id PK
        string name
        string email UK
        string password
        string role
        date email_verified_at
        string remember_token
        date created_at
        date updated_at
    }

    patients {
        int id PK
        string nama
        string no_urut UK
        int umur
        string jenis_kelamin
        string alamat
        string telepon
        int user_id FK
        date created_at
        date updated_at
    }

    predictions {
        int id PK
        int patient_id FK
        int user_id FK
        int usia
        string jenis_kelamin
        int tekanan_darah
        string riwayat_dm
        string hipertensi
        string riwayat_pjk
        string nyeri_dada
        string durasi_nyeri
        string sesak_napas
        string mual
        string muntah
        string keringat_dingin
        string prediction_result
        string probability_angina
        string risk_level
        string confidence
        string features_used
        string doctor_verdict
        string doctor_notes
        int verdict_by FK
        date verdict_at
        date created_at
        date updated_at
    }

    users ||--o{ patients : membuat
    patients ||--o{ predictions : memiliki
    users ||--o{ predictions : mengklasifikasikan
    users ||--o{ predictions : memberi_verdict
